js Event loop & how js work question added

--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
                         </button>
                       </h2>
                       <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                        <div class="accordion-body">JavaScript is a single threaded and single concurrent programming language which means it can handle one task at a time or,
+                          in other words, a piece of code at a time. It's an heigh level interpreted programming language, and like most scripting languages, 
+                         it uses dynamic typing, where type safety is verified at the runtime.The source code is passed through a program called a compiler, 
+                         which translates it into bytecode that the machine understands and can execute.</div>
                       </div>
                     </div>
                     <div class="accordion-item">
@@ -100,7 +103,10 @@
                         </button>
                       </h2>
                       <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                        <div class="accordion-body">Event loop is responsible for checking the call stack in the event queue
+                          also called as callback queue, if all the statements from the call stack
+                          have finished execution event loop will pop the statement
+                          from the event queue and push it to the call stack.</div>
                       </div>
                     </div>
                     <div class="accordion-item">
