fixed faq section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </main>
 
         <!-- FAQ Section  -->
-        <section class="FAQ mb-5 pb-5">
+        <section id="FAQ" class="FAQ mb-5 pb-5">
             <div class="container">
                 <h1 class="ps-3 text-center">Frequently Asked Question (FAQ) </h1>
                 <div class="accordion accordion-flush" id="accordionFlushExample">
